# token-scanner

./: .editorconfig  .pre-commit-config.yaml  README.md  docker-compose.yml  thought_process.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
tokenscanner/: .env.template  Dockerfile  pyproject.toml
tokenscanner/scripts/: migrate.sh  runserver.sh
tokenscanner/src/: main.py  models.py  schemas.py
tokenscanner/src/alembic/: env.py
tokenscanner/src/alembic/versions/: 3c8ced925918_initial_migration.py  4a5998c5ef9c_initial_migrations.py  5de6d04ba49f_initial_migration.py  740f2e1a2517_.py  916acde2af8e_fix_circular_fk_with_use_alter.py
tokenscanner/src/api/: exceptions.py  openapi.py  routes.py  services.py
tokenscanner/src/core/: config.py  db.py
tokenscanner/src/tests/: e2e.py  functional.py  test_functional.py
