[tool.poetry]
name = "tokenscanner"
version = "0.1.0"
description = "Address Scanner for on-chain transactions"
authors = ["50-Course <eridotdev@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "tests"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.2"
pytest = "^8.3.5"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
sentry-sdk = "^2.27.0"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
clickhouse-connect = "^0.8.17"
clickhouse-sqlalchemy = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
